.provarCaches/00D6C0000000xA6UAI/objects/Dataplier__Migration_Step__c.object
<CustomObject>
    <fields>
        <fullName>Dataplier__Failed__c</fullName>
        <label>Failed</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dataplier__Inserted__c</fullName>
        <label>Inserted</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dataplier__Job__c</fullName>
        <label>Migration Job</label>
        <referenceTo>Dataplier__Migration_Job__c</referenceTo>
        <relationshipLabel>Migration Steps</relationshipLabel>
        <relationshipName>Migration_Steps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Dataplier__Migrated__c</fullName>
        <label>Migrated</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dataplier__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dataplier__Order__c</fullName>
        <label>Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dataplier__Sequence_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Execution Sequence Step</label>
        <referenceTo>Dataplier__Execution_Sequence_Step__c</referenceTo>
        <relationshipLabel>Migration Steps</relationshipLabel>
        <relationshipName>Migration_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dataplier__Space_required__c</fullName>
        <description>Calculates the needed space</description>
        <formula>CASE(Dataplier__Object_Name__c, &apos;Campaigns&apos; , 8, &apos;CampaignMember&apos; , 1, &apos;Articles&apos;, 4, 2) * Dataplier__Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Space required (KB)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dataplier__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Queued</fullName>
                    <default>true</default>
                    <label>Queued</label>
                </value>
                <value>
                    <fullName>Preparing</fullName>
                </value>
                <value>
                    <fullName>Migrating</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Updating self-lookups</fullName>
                </value>
                <value>
                    <fullName>Updating cross-references</fullName>
                </value>
                <value>
                    <fullName>Completed,queued: crossupdate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dataplier__Total__c</fullName>
        <label>Total records</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dataplier__Updated__c</fullName>
        <label>Updated</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Migration Step</label>
    <nameField>
        <displayFormat>MS-{000000}</displayFormat>
        <label>Migration Step Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Migration Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>